@@ -19,6 +19,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #21975: Fixed crash when using uninitialized sqlite3.Row (in particular
+  when unpickling pickled sqlite3.Row).  sqlite3.Row is now initialized in the
+  __new__() method.
+
 - Issue #16037: HTTPMessage.readheaders() raises an HTTPException when more
   than 100 headers are read. Patch by Jyrki Pulliainen and Daniel Eriksson.
 
